--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -1,30 +1,44 @@
 ---
 device_onboarding:
-  use_textfsm: true
+  # use_textfsm: true
   hostname:
     jpath: "[*].hostname"
-    command: "show version"
+    command:
+      command: "show version"
+      use_textfsm: true
     post_processor: "{{ obj[0] | upper }}"
   serial:
-    command: "show version"
+    command:
+      command: "show version"
+      use_textfsm: true
     jpath: "[*].serial[0]"
   device_type:
-    command: "show version"
+    command:
+      command: "show version"
+      use_textfsm: true
     jpath: "[*].hardware[0]"
   mgmt_interface:
-    command: "show interfaces"
+    command:
+      command: "show interfaces"
+      use_textfsm: true
     jpath: "[?ip_address=='{{ obj }}'].{name: interface, enabled: link_status}"
     post_processor: "{% for interface in obj %}{% if 'up' in interface['enabled'] %}{{ interface.name }}{% endif %}{% endfor %}"
   mask_length:
-    command: "show interfaces"
+    command:
+      command: "show interfaces"
+      use_textfsm: true
     jpath: "[?ip_address=='{{ obj }}'].prefix_length"
     post_processor: "{{ obj | unique | first }}"
 network_importer:
-  use_textfsm: true
+  # use_textfsm: true
   serial:
-    command: "show version"
+    command:
+      command: "show version"
+      use_textfsm: true
     jpath: "[*].serial[0]"
   interfaces:
-    command: "show interfaces"
+    command:
+      command: "show interfaces"
+      use_textfsm: true
     jpath: "[*].[$interface$,hardware_type,ip_address,prefix_length,mac_address,mtu,description,link_status,vlan_id,vlan_id_inner,vlan_id_outer]"
     post_processor: "{{ obj | fix_interfaces | tojson }}"
