--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -20,12 +20,14 @@ device_onboarding:
       command: "show configuration interfaces | display json"
       use_textfsm: false
     # jpath: '"interface-information"[]."physical-interface"[]."logical-interface"[].{name: name[].data, ip: "address-family"[]."interface-address"[]."ifa-local"[][data=="{{ obj }}"][]}'
-    jpath: "*.interfaces.interface[].{name: name, ip: unit[].family[].*.address[][].name}"
+    # jpath: "*.interfaces.interface[].{name: name, ip: unit[].family[].*.address[][].name}"
+    jpath: '"interface-information"[]."physical-interface"[]."logical-interface"[].{name: name[].data, ip: "address-family"[]."interface-address"[]."ifa-local"[].data[]}'
     post_processor: "{% for entry in obj %}{% if entry['ip'] is not none %}{% for ipaddr in entry['ip'] %}{% if original_host in ipaddr %}{{ entry['name'] }}{% endif %}{% endfor %}{% endif %}{% endfor %}"
   mask_length:
     command:
-      command: "show configuration interfaces | display json"
+      command: "show route protocol direct | display json"
       use_textfsm: false
-    jpath: "*.interfaces.interface[].{name: name, ip: unit[].family[].*.address[][].name}"
+    # jpath: "*.interfaces.interface[].{name: name, ip: unit[].family[].*.address[][].name}"
     # post_processor: "{% for entry in obj %}{% if entry['ip'] and original_host in entry['ip'] %}{{ entry['ip'] | ipaddress_interface('netmask') | netmask_to_cidr }}{% endif %}{% endfor %}"
-    post_processor: "{% for entry in obj %}{% if entry['ip'] is not none %}{% for ipaddr in entry['ip'] %}{% if ipaddr.split('/')[0] == original_host %}{{ ipaddr.split('/')[1] }}{% endif %}{% endfor %}{% endif %}{% endfor %}"
+    jpath: '"route-information"[]."route-table"[]."rt"[]."rt-destination"[].data'
+    post_processor: "{% for ipaddr in obj %}{% if ipaddr.split('/')[0] == original_host %}{{ ipaddr.split('/')[1] }}{% endif %}{% endfor %}{% endif %}{% endfor %}"
