Network ssot integration (#163)
* add more api documentation

* Apply suggestions from code review

Co-authored-by: Joe Wesch <10467633+joewesch@users.noreply.github.com>

* update ssot integration

* update ssot integration

* update ssot integration

* add command getter job

* update lock

* initial cleanup of new job and nornir structures

* create new logger, processor, and process results for return data

* processor update

* update ssot models and adapters

* updated formatter

* update ssot integration

* update ssot integration

* update ssot integration

* update ssot integration

* wip

* update ssot integration

* updated formatting

* updated formatting

* update ssot integration

* update ssot integration

* updated args

* black, isort, pydocstyle

* black and flake 8, some form description updates

* update nautobot version in ci.yml

* fix: Drift management

* pylint

* flake8 and isort

* fix autodetect failing when two ips provided

* fix autodetect failing when two ips provided

* Cookie updated by NetworkToCode Cookie Drift Manager Tool

Template:

```
{
    "template": "https://github.com/nautobot/cookiecutter-nautobot-app.git",
    "dir": "nautobot-app",
    "ref": "refs/tags/nautobot-app-v2.1.0",
    "path": null
}
```

Cookie:

```
{
    "remote": "https://github.com/nautobot/nautobot-app-device-onboarding.git",
    "path": "/tmp/tmppwc0ifgu/nautobot-app-device-onboarding",
    "repository_path": "/tmp/tmppwc0ifgu/nautobot-app-device-onboarding",
    "dir": "",
    "branch_prefix": "drift-manager",
    "context": {
        "codeowner_github_usernames": "@mzbroch @scetron @glennmatthews @chadell",
        "full_name": "Network to Code, LLC",
        "email": "info@networktocode.com",
        "github_org": "nautobot",
        "app_name": "nautobot_device_onboarding",
        "verbose_name": "Device Onboarding",
        "app_slug": "nautobot-device-onb

--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -1,30 +1,27 @@
 ---
 device_onboarding:
-  use_textfsm: false
   hostname:
-    # command: "show hostname"
-    # jpath: "[*].hostname"
-    command: "show hostname | json"
-    jpath: "'hostname'"
+    commands:
+      - command: "show hostname"
+        use_textfsm: true
+        jpath: "[*].hostname"
   serial:
-    # command: "show version"
-    # jpath: "[*].serial_number"
-    command: "show version | json"
-    jpath: "'serialNumber'"
+    commands:
+      - command: "show version"
+        use_textfsm: true
+        jpath: "[*].serial_number"
   device_type:
-    # command: "show version"
-    # jpath: "[*].model"
-    command: "show version | json"
-    jpath: "'modelName'"
+    commands:
+      - command: "show version"
+        use_textfsm: true
+        jpath: "[*].model"
   mgmt_interface:
-    # command: "show ip interface brief"
-    # jpath: "[?interface=='Management1'].interface"
-    command: "show ip interface brief | json"
-    #jpath: "[?interface=='Management1'].interface"
-    jpath: "[*].[$interface$,link_status,protocol_status,hardware_type,mac_address,ip_address,prefix_length,mtu]"
+    commands:
+      - command: "show ip interface brief | json"
+        use_textfsm: false
+        jpath: "interfaces.*.{name: name, match_ip: interfaceAddress.ipAddr.address=='{{ obj }}'}[? match_ip].name"
   mask_length:
-    # command: "show ip interface brief"
-    # jpath: "[?interface=='Management1'].ip_address"
-    command: "show ip interface brief"
-    jpath: "$interfaces$.*.interfaceAddress[?ipAddr.address=='{{ obj }}']"
-    # post_processor: "{{ obj[0] | ipaddress_interface('netmask') | netmask_to_cidr }}"
+    commands:
+      - command: "show ip interface brief | json"
+        use_textfsm: false
+        jpath: "interfaces.*.interfaceAddress[?ipAddr.address=='{{ obj }}'].ipAddr.maskLen"
