--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -1,30 +1,96 @@
 ---
 device_onboarding:
-  use_textfsm: true
   hostname:
-    jpath: "[*].hostname"
-    command: "show version"
-    post_processor: "{{ obj[0] | upper }}"
+    commands:
+      - command: "show version"
+        use_textfsm: true
+        post_processor: "{{ obj[0] | upper }}"
+        jpath: "[*].hostname"
   serial:
-    command: "show version"
-    jpath: "[*].serial[0]"
+    commands:
+      - command: "show version"
+        use_textfsm: true
+        jpath: "[*].serial[0]"
   device_type:
-    command: "show version"
-    jpath: "[*].hardware[0]"
+    commands:
+      - command: "show version"
+        use_textfsm: true
+        jpath: "[*].hardware[0]"
   mgmt_interface:
-    command: "show interfaces"
-    jpath: "[?ip_address=='{{ obj }}'].{name: interface, enabled: link_status}"
-    post_processor: "{% for interface in obj %}{% if 'up' in interface['enabled'] %}{{ interface.name }}{% endif %}{% endfor %}"
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[?ip_address=='{{ obj }}'].{name: interface, enabled: link_status}"
+        post_processor: "{% for interface in obj %}{% if 'up' in interface['enabled'] %}{{ interface.name }}{% endif %}{% endfor %}"
   mask_length:
-    command: "show interfaces"
-    jpath: "[?ip_address=='{{ obj }}'].prefix_length"
-    post_processor: "{{ obj | unique | first }}"
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[?ip_address=='{{ obj }}'].prefix_length"
+        post_processor: "{{ obj | unique | first }}"
 network_importer:
-  use_textfsm: true
   serial:
-    command: "show version"
-    jpath: "[*].serial[0]"
+    commands:
+      - command: "show version"
+        use_textfsm: true
+        jpath: "[*].serial[0]"
   interfaces:
-    command: "show interfaces"
-    jpath: "[*].[$interface$,hardware_type,ip_address,prefix_length,mac_address,mtu,description,link_status,vlan_id,vlan_id_inner,vlan_id_outer]"
-    post_processor: "{{ obj | fix_interfaces | tojson }}"
+    interfaces:
+      commands:
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface}"
+    type:
+      commands:
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface, hardware_type: hardware_type}"
+    ip_addresses:
+      commands:
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface, ip_address: ip_address}"
+    mtu:
+      commands:
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface, mtu: mtu}"
+    mac_address:
+      commands:
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface, mac_address: mac_address}"
+    description:
+      commands:
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface, description: description}"
+    link_status:
+      commands:
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface, link_status: link_status}"
+    dot1q_mode:
+      commands:
+        - command: "show interfaces switchport"
+          use_textfsm: true
+          jpath: "[*].mode"
+        - command: "show interfaces"
+          use_textfsm: true
+          jpath: "[*].{interface: interface, encapsulation: encapsulation}"
+      validator_pattern: "not None"
+    lag:
+      commands:
+        - command: "show etherchannel summary"
+          use_textfsm: true
+          jpath: "[*].protocol"
+    untagged_vlan:
+      commands:
+        - command: "show vlans"
+          use_textfsm: true
+          jpath: "[*].vlan_id"
+    tagged_vlans:
+      commands:
+        - command: "show vlans"
+          use_textfsm: true
+          jpath: "[*].vlan_id"
