--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -25,3 +25,44 @@ device_onboarding:
       - command: "show interface"
         use_textfsm: true
         jpath: "[?ip_address=='{{ obj }}'].prefix_length || [`31`]"
+network_importer:
+  type:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, type: hardware_type}"
+  ip_addresses:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, ip_address: ip_address}"
+  prefix_length:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, prefix_length: prefix_length}"
+  mtu:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, mtu: mtu}"
+  mac_address:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, mac_address: mac_address}"
+  description:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, description: description}"
+  link_status:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, link_status: link_status}"
+  mode:
+    commands:
+      - command: "show interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, mode: mode}"
