Network ssot integration (#168)
* add more api documentation

* Apply suggestions from code review

Co-authored-by: Joe Wesch <10467633+joewesch@users.noreply.github.com>

* update ssot integration

* update ssot integration

* update ssot integration

* add command getter job

* update lock

* initial cleanup of new job and nornir structures

* create new logger, processor, and process results for return data

* processor update

* update ssot models and adapters

* updated formatter

* update ssot integration

* update ssot integration

* update ssot integration

* update ssot integration

* wip

* update ssot integration

* updated formatting

* updated formatting

* update ssot integration

* update ssot integration

* updated args

* black, isort, pydocstyle

* black and flake 8, some form description updates

* update nautobot version in ci.yml

* fix: Drift management

* pylint

* flake8 and isort

* fix autodetect failing when two ips provided

* fix autodetect failing when two ips provided

* Cookie updated by NetworkToCode Cookie Drift Manager Tool

Template:

```
{
    "template": "https://github.com/nautobot/cookiecutter-nautobot-app.git",
    "dir": "nautobot-app",
    "ref": "refs/tags/nautobot-app-v2.1.0",
    "path": null
}
```

Cookie:

```
{
    "remote": "https://github.com/nautobot/nautobot-app-device-onboarding.git",
    "path": "/tmp/tmppwc0ifgu/nautobot-app-device-onboarding",
    "repository_path": "/tmp/tmppwc0ifgu/nautobot-app-device-onboarding",
    "dir": "",
    "branch_prefix": "drift-manager",
    "context": {
        "codeowner_github_usernames": "@mzbroch @scetron @glennmatthews @chadell",
        "full_name": "Network to Code, LLC",
        "email": "info@networktocode.com",
        "github_org": "nautobot",
        "app_name": "nautobot_device_onboarding",
        "verbose_name": "Device Onboarding",
        "app_slug": "nautobot-device-onb

--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -29,68 +29,73 @@ device_onboarding:
         jpath: "[?ip_address=='{{ obj }}'].prefix_length"
         post_processor: "{{ obj | unique | first }}"
 network_importer:
-  serial:
+  # serial:
+  #   commands:
+  #     - command: "show version"
+  #       use_textfsm: true
+  #       jpath: "[*].serial[0]"
+  # interfaces:
+  #   interfaces:
+  #     commands:
+  #       - command: "show interfaces"
+  #         use_textfsm: true
+  #         jpath: "[*].{interface: interface}"
+  type:
     commands:
-      - command: "show version"
+      - command: "show interfaces"
         use_textfsm: true
-        jpath: "[*].serial[0]"
-  interfaces:
-    interfaces:
-      commands:
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface}"
-    type:
-      commands:
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface, hardware_type: hardware_type}"
-    ip_addresses:
-      commands:
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface, ip_address: ip_address}"
-    mtu:
-      commands:
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface, mtu: mtu}"
-    mac_address:
-      commands:
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface, mac_address: mac_address}"
-    description:
-      commands:
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface, description: description}"
-    link_status:
-      commands:
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface, link_status: link_status}"
-    dot1q_mode:
-      commands:
-        - command: "show interfaces switchport"
-          use_textfsm: true
-          jpath: "[*].mode"
-        - command: "show interfaces"
-          use_textfsm: true
-          jpath: "[*].{interface: interface, encapsulation: encapsulation}"
-      validator_pattern: "not None"
-    lag:
-      commands:
-        - command: "show etherchannel summary"
-          use_textfsm: true
-          jpath: "[*].protocol"
-    untagged_vlan:
-      commands:
-        - command: "show vlans"
-          use_textfsm: true
-          jpath: "[*].vlan_id"
-    tagged_vlans:
-      commands:
-        - command: "show vlans"
-          use_textfsm: true
-          jpath: "[*].vlan_id"
+        jpath: "[*].{interface: interface, type: hardware_type}"
+  ip_addresses:
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, ip_address: ip_address}"
+  prefix_length:
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, prefix_length: prefix_length}"
+  mtu:
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, mtu: mtu}"
+  mac_address:
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, mac_address: mac_address}"
+  description:
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, description: description}"
+  link_status:
+    commands:
+      - command: "show interfaces"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, link_status: link_status}"
+        # dot1q_mode:
+        #   commands:
+        #     # - command: "show interfaces switchport"
+        #     #   use_textfsm: true
+        #     #   jpath: "[*].mode"
+        #     - command: "show interfaces switchport"
+        #       use_textfsm: true
+        #       jpath: "[*].{interface: interface, dot1q_mode: admin_mode}"
+        #   validator_pattern: "not None"
+        # # lag:
+        # #   commands:
+        # #     - command: "show etherchannel summary"
+        # #       use_textfsm: true
+        # #       jpath: "[*].protocol"
+        # # untagged_vlan:
+        # #   commands:
+        # #     - command: "show vlans"
+        # #       use_textfsm: true
+        # #       jpath: "[*].vlan_id"
+        # # tagged_vlans:
+        # #   commands:
+        # #     - command: "show vlans"
+        # #       use_textfsm: true
+        # #       jpath: "[*].vlan_id"
