--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -31,3 +31,9 @@ device_onboarding:
         use_textfsm: false
         jpath: '"route-information"[]."route-table"[]."rt"[]."rt-destination"[].data'  # yamllint disable-line rule:quoted-strings
         post_processor: "{% set mask = [] %}{% for ip_route in obj %}{% if ip_route | is_network %}{% if ip_route | ipaddress_network('version') == 4 %}{% if original_host | is_ip_within(ip_route) %}{% set _=mask.append(ip_route.split('/')[1]) %}{% endif %}{% endif %}{% endif %}{% endfor %}{{ mask | unique | first}}"
+network_importer:
+  hostname:
+    commands:
+      - command: "show version | display json"
+        use_textfsm: false
+        jpath: '"software-information"[]."host-name"[].data'  # yamllint disable-line rule:quoted-strings
