--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -71,3 +71,13 @@ network_importer:
       - command: "show interface"
         use_textfsm: true
         jpath: "[*].{interface: interface, mode: mode}"
+  vrf_interfaces:
+    commands:
+      - command: "show vrf interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, name: name, id: id}"
+  vrf_rds:
+    commands:
+      - command: "show vrf detail"
+        use_textfsm: true
+        jpath: "[*].{id: id, name: name, default_rd: default_rd}"
