added 802.1q support for ios

--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -80,3 +80,8 @@ network_importer:
       - command: "show vrf"
         use_textfsm: true
         jpath: "[*].{name: name, default_rd: default_rd, interfaces: interfaces}"
+  mode:
+    commands:
+      - command: "show interface status"
+        use_textfsm: true
+        jpath: "[*].{interface: port, vlan_id: vlan_id}"
