--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -17,15 +17,21 @@ device_onboarding:
         jpath: "[*].platform"
   mgmt_interface:
     commands:
-      - command: "show interface"
+      - command: "show ip interface vrf all"
         use_textfsm: true
         jpath: "[?ip_address=='{{ obj }}'].interface || [`mgmt0`]"
   mask_length:
     commands:
+      - command: "show ip interface vrf all"
+        use_textfsm: true
+        jpath: "[?ip_address=='{{ obj }}'].subnet"
+        post_processor: "{% if '/' in obj[0] %}{{ obj[0].split('/')[1] }}{% else %}31{% endif %}"
+network_importer:
+  interface:
+    commands:
       - command: "show interface"
         use_textfsm: true
-        jpath: "[?ip_address=='{{ obj }}'].prefix_length || [`31`]"
-network_importer:
+        jpath: "[*].{interface: interface, interface: interface}"
   serial:
     commands:
       - command: "show inventory"
@@ -38,14 +44,14 @@ network_importer:
         jpath: "[*].{interface: interface, type: hardware_type}"
   ip_addresses:
     commands:
-      - command: "show interface"
+      - command: "show ip interface vrf all"
         use_textfsm: true
         jpath: "[*].{interface: interface, ip_address: ip_address}"
   prefix_length:
     commands:
-      - command: "show interface"
+      - command: "show ip interface vrf all"
         use_textfsm: true
-        jpath: "[*].{interface: interface, prefix_length: prefix_length}"
+        jpath: "[*].{interface: interface, prefix_length: subnet}"
   mtu:
     commands:
       - command: "show interface"
@@ -71,3 +77,18 @@ network_importer:
       - command: "show interface"
         use_textfsm: true
         jpath: "[*].{interface: interface, mode: mode}"
+  vrf_interfaces:
+    commands:
+      - command: "show vrf interface"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, name: name}"
+  vlans:
+    commands:
+      - command: "show vlan"
+        use_textfsm: true
+        jpath: "[*].{interfaces: interfaces, vlan_name: vlan_name, vlan_id: vlan_id, status: status}"
+  interface_vlans:
+    commands:
+      - command: "show interface switchport"
+        use_textfsm: true
+        jpath: "[*].{interface: interface, mode:mode, access_vlan: access_vlan, access_vlan_name: access_vlan_name, native_vlan: native_vlan, trunking_vlans: trunking_vlans, voice_vlan: voice_vlan}"
