--- a/nautobot_device_onboarding/command_mappers/cisco_xe.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_xe.yml
@@ -34,6 +34,12 @@ network_importer:
       - command: "show version"
         use_textfsm: true
         jpath: "[*].serial[0]"
+  # interfaces:
+  #   interfaces:
+  #     commands:
+  #       - command: "show interfaces"
+  #         use_textfsm: true
+  #         jpath: "[*].{interface: interface}"
   type:
     commands:
       - command: "show interfaces"
@@ -73,7 +79,12 @@ network_importer:
     commands:
       - command: "show vrf"
         use_textfsm: true
-        jpath: "[*].{name: name, interfaces: interfaces}"
+        jpath: "[*].{name: name, default_rd: default_rd, interfaces: interfaces}"
+  # mode:
+  #   commands:
+  #     - command: "show interfaces switchport"
+  #       use_textfsm: true
+  #       jpath: "[*].{interface: interface, mode: mode, admin_mode: admin_mode}"
   vlans:
     commands:
       - command: "show vlan"
