--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -1,5 +1,5 @@
 ---
-device_onboarding:
+sync_devices:
   hostname:
     commands:
       - command: "show version"
@@ -28,7 +28,7 @@ device_onboarding:
         use_textfsm: true
         jpath: "[?ip_address=='{{ obj }}'].prefix_length"
         post_processor: "{{ obj | unique | first }}"
-network_importer:
+sync_network_data:
   serial:
     commands:
       - command: "show version"
