--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -1,5 +1,5 @@
 ---
-device_onboarding:
+sync_devices:
   hostname:
     commands:
       - command: "show version"
@@ -26,7 +26,7 @@ device_onboarding:
         use_textfsm: true
         jpath: "[?ip_address=='{{ obj }}'].subnet"
         post_processor: "{% if '/' in obj[0] %}{{ obj[0].split('/')[1] }}{% else %}31{% endif %}"
-network_importer:
+sync_network_data:
   interface:
     commands:
       - command: "show interface"
