--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -1,5 +1,5 @@
 ---
-device_onboarding:
+sync_devices:
   hostname:
     commands:
       - command: "show version | display json"
@@ -23,17 +23,7 @@ device_onboarding:
         post_processor: "{% for entry in obj %}{% if entry['ip'] %}{% for ipaddr in entry['ip'] %}{% if original_host in ipaddr %}{{ entry['name'] | first }}{% endif %}{% endfor %}{% endif %}{% endfor %}"
   mask_length:
     commands:
-      # - command: "show route protocol direct | display json"
-      #   use_textfsm: false
-      #   jpath: ""route-information"[]."route-table"[]."rt"[]."rt-destination"[].data  || [`31`]"
-      #   post_processor: "{% for ipaddr in obj %}{% if '/' in ipaddr and ipaddr.split('/')[0] == original_host %}{{ ipaddr.split('/')[1] }}{% endif %}{% endfor %}"
       - command: "show route protocol direct | display json"
         use_textfsm: false
         jpath: '"route-information"[]."route-table"[]."rt"[]."rt-destination"[].data'  # yamllint disable-line rule:quoted-strings
         post_processor: "{% set mask = [] %}{% for ip_route in obj %}{% if ip_route | is_network %}{% if ip_route | ipaddress_network('version') == 4 %}{% if original_host | is_ip_within(ip_route) %}{% set _=mask.append(ip_route.split('/')[1]) %}{% endif %}{% endif %}{% endif %}{% endfor %}{{ mask | unique | first}}"
-network_importer:
-  hostname:
-    commands:
-      - command: "show version | display json"
-        use_textfsm: false
-        jpath: '"software-information"[]."host-name"[].data'  # yamllint disable-line rule:quoted-strings
