rename jobs throughout docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,7 +102,7 @@ nav:
       - App Overview: "user/app_overview.md"
       - Getting Started: "user/app_getting_started.md"
       - Using the App: "user/app_use_cases.md"
-      - Using the App (Legacy): "user/app_use_cases_legacy.md"
+      - Using the App (Original): "user/app_use_cases_original.md"
       - Frequently Asked Questions: "user/faq.md"
       - External Interactions: "user/external_interactions.md"
       - Detailed Design: "user/app_detailed_design.md"
